# espMeshFlood

./: .gitignore  CMakeLists.txt  README.md  build_and_test.sh  library.json  platformio.ini
.github/agents/: grill-me.agent.md
build_tests/: CTestTestfile.cmake  test_all
build_tests/Testing/Temporary/: CTestCostData.txt  LastTest.log.tmp
build_verify/: CTestTestfile.cmake  espMeshFloodConfig.cmake  test_all
build_verify/Testing/Temporary/: CTestCostData.txt
cmake/: espMeshFloodConfig.cmake.in
docs/: API_REFERENCE.md  SPECIFICATION.md
examples/bluetooth_mesh_node/: main.cpp
examples/minimal_mesh_node/: main.cpp
proto/: heartbeat.proto  mesh_message.proto
scripts/: proto_build.py
src/: main.cpp
src/espMeshFlood/: config.h  efmp.cpp  efmp.h  types.h  version.h
src/espMeshFlood/backoff/: random_backoff.cpp  random_backoff.h
src/espMeshFlood/cache/: message_cache.cpp  message_cache.h
src/espMeshFlood/host/: ble_host_transport.cpp  ble_host_transport.h  frame_parser.cpp  frame_parser.h  host_transport.h  serial_host_transport.h
src/espMeshFlood/message/: message_metadata.cpp  message_metadata.h
src/espMeshFlood/protocol/: mesh_protocol.cpp  mesh_protocol.h
src/espMeshFlood/serialization/: message_serializer.cpp  message_serializer.h
src/espMeshFlood/transport/: esp_now_transport.h  esp_now_transport_impl.cpp  esp_now_transport_impl.h
test/: mock_transport.h  test_all.cpp
test/integration/: message_flow_test.cpp
test/mocks/: mock_stream.h  mock_transport.h
test/unit/: backoff_test.cpp  cache_test.cpp  frame_parser_test.cpp  serial_host_transport_test.cpp  serialization_test.cpp  ttl_test.cpp
